--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -5,3 +5,11 @@
 * {
     @apply text-black-primary
 }
+
+p.text-sm.text-gray-700.leading-5 {
+    @apply hidden
+}
+
+.relative.inline-flex.items-center.px-4.py-2.-ml-px.text-sm.font-medium.text-gray-500.bg-white.border.border-gray-300.cursor-default.leading-5 {
+    @apply bg-gray-100
+}
